--- a/index.html
+++ b/index.html
@@ -3,8 +3,75 @@
     <head>
         <meta charset="UTF-8">
         <title>Marie PERBELLE</title>
+
+        <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="assets/bootstrap/css/bootstrap-utilities.css" rel="stylesheet">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
+
+        <link href="assets/css/index.css" rel="stylesheet">
+
+        <script src="assets/bootstrap/js/bootstrap.js"></script>
     </head>
     <body>
+        <header>
+            <div class="header-info p-2 d-flex justify-content-between align-items-center text-white">
 
+                <div>
+                    <i class="me-1 bi bi-telephone"></i>
+                    00/00/00/00/00
+
+                    <i class="ms-4 me-1 bi bi-envelope"></i>
+                    <a href="mailto:marieparbelle@gmail.com">marieparbelle@gmail.com</a>
+                </div>
+
+                <div class="social-media">
+                    <i class="bi bi-instagram"></i>
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-linkedin"></i>
+                </div>
+            </div>
+
+            <div class="home-background">
+                <nav class="d-flex navbar navbar-expand-lg navbar-dark bg-black bg-opacity-25">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">MARIE PARBELLE</a>
+                        <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"
+                                class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse"
+                                type="button">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-end" id="navbar">
+                            <ul class="navbar-nav mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a aria-current="page" class="nav-link active" href="#">Qui suis-je ?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">RESC</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Boutique</a>
+                                </li>
+
+                                <a href="#" class="btn btn-principal" role="button">Prendre rendez-vous</a>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <h1 class="home-background-title d-flex justify-content-center text-center">Les trois mondes <br> créations, soin et accompagnement</h1>
+            </div>
+        </header>
+
+        <main>
+            <section class="mt-5" id="welcome">
+                <div class="container">
+                    <h1 class="h1 d-flex justify-content-end">Bienvenue !</h1>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
